--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -21,5 +21,5 @@ jobs:
 # Run Unit tests- Specify unit tests here
 
 # sam deploy
-      - run: sam deploy --no-confirm-changeset --no-fail-on-empty-changeset --stack-name sam-app --capabilities CAPABILITY_IAM --region eu-north-1
-      #- run: sam deploy --no-confirm-changeset --no-fail-on-empty-changeset --stack-name sam-app --s3-bucket bucketforawsappdeploytutorail --capabilities CAPABILITY_IAM --region eu-north-1
+      - run: sam deploy --no-confirm-changeset --no-fail-on-empty-changeset --stack-name sam-app1 --capabilities CAPABILITY_IAM --region eu-north-1
+      #- run: sam deploy --no-confirm-changeset --no-fail-on-empty-changeset --stack-name sam-app1 --s3-bucket bucketforawsappdeploytutorail --capabilities CAPABILITY_IAM --region eu-north-1
