--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -18,8 +18,9 @@ jobs:
       # sam build
       - run: sam build --use-container
 
-# Run Unit tests- Specify unit tests here
+      # Run Unit tests- Specify unit tests
+      - run: python -m pytest
 
-# sam deploy
-      - run: sam deploy --no-confirm-changeset --no-fail-on-empty-changeset --stack-name sam-app1 --capabilities CAPABILITY_IAM --region eu-north-1
+      # sam deploy
+      - run: sam deploy --no-confirm-changeset --no-fail-on-empty-changeset --capabilities CAPABILITY_IAM --region eu-north-1
       #- run: sam deploy --no-confirm-changeset --no-fail-on-empty-changeset --stack-name sam-app1 --s3-bucket bucketforawsappdeploytutorail --capabilities CAPABILITY_IAM --region eu-north-1
