--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -20,6 +20,7 @@ jobs:
 
       # Run Unit tests- Specify unit tests
       - run: pip install pytest
+      - run: pip install numpy
       - run: python -m pytest
 
       # sam deploy
